--- a/.github/workflows/run_api.yml
+++ b/.github/workflows/run_api.yml
@@ -42,8 +42,12 @@ jobs:
         run: |
           python image_request.py --location "${{ matrix.location_nr }}"
 
-    outputs:
-      done: "true"
+      - name: Upload results
+        uses: actions/upload-artifact@v4
+        with:
+          name: results-${{ matrix.location_nr }}
+          path: output/ 
+          if-no-files-found: ignore
 
 
   commit-and-push:
@@ -56,8 +60,16 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          persist-credentials: true
+      
+      - name: Download all artifacts 
+        uses: actions/download-artifact@v4 
+        with: 
+          path: output/
+
+      - name: Move downloaded files into repo 
+        run: | 
+          mkdir -p dataset 
+          cp -r output/* dataset/ || true
 
       - name: Commit and push all changes
         run: |
