--- a/.github/workflows/run_api.yml
+++ b/.github/workflows/run_api.yml
@@ -1,5 +1,9 @@
 name: Run Image Request
 
+defaults:
+  run:
+    working-directory: ${{ github.workspace }}
+
 concurrency:
   group: streetview-dataset
   cancel-in-progress: false
@@ -36,15 +40,13 @@ jobs:
           python-version: "3.11"
 
       - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
 
       - name: Install Playwright browsers
         run: playwright install --with-deps
 
       - name: Run script for index ${{ matrix.location_nr }}
-        run: |
-          python image_request.py --location "${{ matrix.location_nr }}"
+        run: python image_request.py --location "${{ matrix.location_nr }}"
 
       - name: Upload results
         uses: actions/upload-artifact@v4
