--- a/.github/workflows/run_api.yml
+++ b/.github/workflows/run_api.yml
@@ -52,10 +52,9 @@ jobs:
         with:
           name: results-${{ matrix.location_nr }}
           path: |
-            dataset/
-            errors/
-            challenge_urls/
-
+            dataset/${{ matrix.location_nr }}
+            errors/${{ matrix.location_nr }}_errors.csv
+            challenge_urls/${{ matrix.location_nr }}_challenge_urls.csv
           if-no-files-found: ignore
 
 
