--- a/.github/workflows/run_api.yml
+++ b/.github/workflows/run_api.yml
@@ -88,42 +88,35 @@ jobs:
           # Wenn ein Pattern keine Treffer hat, wird es leer statt als Literal
           shopt -s nullglob
       
-          echo "=== DEBUG: Gefundene dataset-Ordner ==="
-          ls artifacts/*/dataset/* || echo "Keine dataset-Ordner gefunden"
-          
-          # Kopiere alle dataset-Unterordner
-          for d in artifacts/*/dataset/*; do
-            if [ -d "$d" ]; then
-              echo "Kopiere Dataset-Ordner: $d"
-              cp -r "$d" dataset/
+          # Für jedes Artifact (results-0, results-1, ...)
+          for art in artifacts/results-*; do
+            echo "== Merge: $art =="
+      
+            # Dataset-Ordner kopieren (falls vorhanden)
+            if [ -d "$art/dataset" ]; then
+              for d in "$art"/dataset/*; do
+                echo "Kopiere Dataset: $d"
+                cp -r "$d" dataset/
+              done
+            fi
+      
+            # Fehler-CSV kopieren (falls vorhanden)
+            if ls "$art"/errors/*.csv >/dev/null 2>&1; then
+              for e in "$art"/errors/*.csv; do
+                echo "Kopiere Fehler-CSV: $e"
+                cp "$e" errors/
+              done
+            fi
+      
+            # Challenge-URLs kopieren (falls vorhanden)
+            if ls "$art"/challenge_urls/*.csv >/dev/null 2>&1; then
+              for c in "$art"/challenge_urls/*.csv; do
+                echo "Kopiere Challenge-URL-CSV: $c"
+                cp "$c" challenge_urls/
+              done
             fi
           done
       
-          echo "=== DEBUG: Gefundene Fehler-CSV ==="
-          ls artifacts/*/errors/*.csv || echo "Keine Fehler-CSV gefunden"
-          
-          # Kopiere alle *_errors.csv
-          for e in artifacts/*/errors/*.csv; do
-            echo "Kopiere Fehler-CSV: $e"
-            cp "$e" errors/
-          done
-      
-          echo "=== DEBUG: Gefundene challenge_urls-CSV ==="
-          ls artifacts/*/challenge_urls/*.csv || echo "Keine challenge_urls-CSV gefunden"
-          
-          # Kopiere alle *_challenge_urls.csv
-          for c in artifacts/*/challenge_urls/*.csv; do
-            echo "Kopiere challenge_urls-CSV: $c"
-            cp "$c" challenge_urls/
-          done
-      
-          echo "=== DEBUG: Inhalt nach Merge ==="
-          echo "--- dataset/ ---"
-          ls -R dataset/
-          echo "--- errors/ ---"
-          ls -R errors/
-          echo "--- challenge_urls/ ---"
-          ls -R challenge_urls/
       
 
       - name: Cleanup artifacts folder
