--- a/.github/workflows/run_api.yml
+++ b/.github/workflows/run_api.yml
@@ -11,24 +11,30 @@ on:
 
 jobs:
   run-country:
+    name: Run country ${{ matrix.location }}
     runs-on: ubuntu-latest
 
     strategy:
       fail-fast: false
       matrix:
-        location_nr: [
-          0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,
-          21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,
-          39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,
-          57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,
-          75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93
+        location: [
+          "0","1","2","3","4","5","6","7","8","9",
+          "10","11","12","13","14","15","16","17","18","19",
+          "20","21","22","23","24","25","26","27","28","29",
+          "30","31","32","33","34","35","36","37","38","39",
+          "40","41","42","43","44","45","46","47","48","49",
+          "50","51","52","53","54","55","56","57","58","59",
+          "60","61","62","63","64","65","66","67","68","69",
+          "70","71","72","73","74","75","76","77","78","79",
+          "80","81","82","83","84","85","86","87","88","89",
+          "90","91","92"
         ]
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          persist-credentials: true
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -44,10 +50,10 @@ jobs:
         run: playwright install --with-deps
 
       - name: Run script for index ${{ matrix.location_nr }}
-        working-directory: ${{ github.workspace }}
-        run: python image_request.py --location "${{ matrix.location_nr }}"
+        run: |
+          python image_request.py --location ${{ matrix.location }}
 
-      - name: Upload results
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: results-${{ matrix.location_nr }}
@@ -70,75 +76,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          clean: false
           fetch-depth: 0
 
-      - name: Download all artifacts 
-        uses: actions/download-artifact@v4 
-        with: 
-          path: artifacts/
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: .
 
-      - name: Merge artifacts into repo folders
-        working-directory: ${{ github.workspace }}
+      - name: Commit and push changes
         run: |
-          echo "=== DEBUG: Inhalt von artifacts/ ==="
-          ls -R artifacts/ || echo "Keine artifacts gefunden"
-      
-          mkdir -p dataset errors challenge_urls
-
-          # Wenn ein Pattern keine Treffer hat, wird es leer statt als Literal
-          shopt -s nullglob
-      
-          # Für jedes Artifact (results-0, results-1, ...)
-          for art in artifacts/results-*; do
-            echo "== Merge: $art =="
-      
-            # Dataset-Ordner kopieren (falls vorhanden)
-            if [ -d "$art/dataset" ]; then
-              for d in "$art"/dataset/*; do
-                echo "Kopiere Dataset: $d"
-                cp -r "$d" dataset/
-              done
-            fi
-      
-            # Fehler-CSV kopieren (falls vorhanden)
-            if ls "$art"/errors/*.csv >/dev/null 2>&1; then
-              for e in "$art"/errors/*.csv; do
-                echo "Kopiere Fehler-CSV: $e"
-                cp "$e" errors/
-              done
-            fi
-      
-            # Challenge-URLs kopieren (falls vorhanden)
-            if ls "$art"/challenge_urls/*.csv >/dev/null 2>&1; then
-              for c in "$art"/challenge_urls/*.csv; do
-                echo "Kopiere Challenge-URL-CSV: $c"
-                cp "$c" challenge_urls/
-              done
-            fi
-          done
-      
-      
-
-      - name: Cleanup artifacts folder
-        working-directory: ${{ github.workspace }}
-        run: rm -rf artifacts
-
-      - name: Commit and push all changes
-        working-directory: ${{ github.workspace }}
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
-          git add -A
-
-          if ! git diff --cached --quiet; then
-            git commit -m "Update dataset and logs (all countries)"
-
-            # WICHTIG: Remote-Änderungen holen, bevor wir pushen
-            git pull --rebase origin main
-
-            git push origin main
-          else
-            echo "Keine Änderungen, kein Commit."
-          fi
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add dataset errors challenge_urls || true
+          git commit -m "Update dataset $(date)" || true
+          git push origin main
