--- a/.github/workflows/run_api.yml
+++ b/.github/workflows/run_api.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: results-${{ matrix.location_nr }}
+          name: results-${{ matrix.location_nr }}-${{ github.run_id }}
           path: |
             dataset/
             errors/
