--- a/.github/workflows/run_api.yml
+++ b/.github/workflows/run_api.yml
@@ -11,30 +11,24 @@ on:
 
 jobs:
   run-country:
-    name: Run country ${{ matrix.location }}
     runs-on: ubuntu-latest
 
     strategy:
       fail-fast: false
       matrix:
-        location: [
-          "0","1","2","3","4","5","6","7","8","9",
-          "10","11","12","13","14","15","16","17","18","19",
-          "20","21","22","23","24","25","26","27","28","29",
-          "30","31","32","33","34","35","36","37","38","39",
-          "40","41","42","43","44","45","46","47","48","49",
-          "50","51","52","53","54","55","56","57","58","59",
-          "60","61","62","63","64","65","66","67","68","69",
-          "70","71","72","73","74","75","76","77","78","79",
-          "80","81","82","83","84","85","86","87","88","89",
-          "90","91","92"
+        location_nr: [
+          0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,
+          21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,
+          39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,
+          57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,
+          75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93
         ]
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          persist-credentials: true
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -50,43 +44,34 @@ jobs:
         run: playwright install --with-deps
 
       - name: Run script for index ${{ matrix.location_nr }}
+        working-directory: ${{ github.workspace }}
+        run: python image_request.py --location "${{ matrix.location_nr }}"
+
+      - name: Commit and push results
+        concurrency:
+          group: push-lock
+          cancel-in-progress: false
+        working-directory: ${{ github.workspace }}
         run: |
-          python image_request.py --location ${{ matrix.location }}
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: results-${{ matrix.location_nr }}-${{ github.run_id }}
-          path: |
-            dataset/
-            errors/
-            challenge_urls/
-          if-no-files-found: ignore
+          git add -A
 
+          if git diff --cached --quiet; then
+            echo "Keine Änderungen, kein Commit."
+            exit 0
+          fi
 
-  commit-and-push:
-    if: always()
-    runs-on: ubuntu-latest
-    needs: run-country
+          git commit -m "Update dataset for location ${{ matrix.location_nr }}"
 
-    permissions:
-      contents: write
+          # Push mit Retry (wegen parallelen Jobs)
+          for i in {1..5}; do
+            if git pull --rebase origin main && git push origin main; then
+              echo "Push erfolgreich."
+              break
+            fi
+            echo "Push fehlgeschlagen, versuche erneut ($i/5)..."
+            sleep 3
+          done
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: .
-
-      - name: Commit and push changes
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-          git add dataset errors challenge_urls || true
-          git commit -m "Update dataset $(date)" || true
-          git push origin main
