fix: write permissions

--- a/.github/workflows/run_api.yml
+++ b/.github/workflows/run_api.yml
@@ -1,5 +1,8 @@
 name: Run Image Request
 
+permissions:
+  contents: write
+
 concurrency:
   group: streetview-dataset
   cancel-in-progress: false
@@ -27,8 +30,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          persist-credentials: true
 
       - name: Set up Python
         uses: actions/setup-python@v5
