--- a/.github/workflows/run_api.yml
+++ b/.github/workflows/run_api.yml
@@ -8,8 +8,8 @@ concurrency:
   cancel-in-progress: false
 
 on: 
-  # schedule:
-  #  - cron: "0 */3 * * *"
+  schedule:
+    - cron: "0 */3 * * *"
   workflow_dispatch:
 
 jobs:
