--- a/.github/workflows/push_to_hf.yml
+++ b/.github/workflows/push_to_hf.yml
@@ -35,44 +35,38 @@ jobs:
         run: |
           echo "Kein dataset Ordner vorhanden – Workflow wird beendet."
 
-      - name: Set up Git LFS
+      - name: Install Python dependencies
         if: steps.check_dataset.outputs.exists == 'true'
         run: |
-          git lfs install
+          pip install huggingface_hub
 
-      - name: Clone HuggingFace dataset repo into temp directory
+      - name: Upload dataset to HuggingFace dataset
         if: steps.check_dataset.outputs.exists == 'true'
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
           HF_USERNAME: ${{ secrets.HF_USERNAME }}
           HF_DATASET: ${{ secrets.HF_DATASET }}
         run: |
-          mkdir -p temp
-          cd temp
-          git clone https://huggingface.co/datasets/${{ secrets.HF_USERNAME }}/${{ secrets.HF_DATASET }} hf_dataset
-          cd hf_dataset
-          git lfs install
-
-      - name: Copy dataset to HuggingFace repo
-        if: steps.check_dataset.outputs.exists == 'true'
-        run: |
-          cd temp/hf_dataset
-          mkdir -p dataset
-          cp -rn ../../dataset/* dataset/
-
-      - name: Commit & push to HuggingFace
-        if: steps.check_dataset.outputs.exists == 'true'
-        env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}
-          HF_USERNAME: ${{ secrets.HF_USERNAME }}
-          HF_DATASET: ${{ secrets.HF_DATASET }}
-        run: |
-          cd temp/hf_dataset
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git config user.name "github-actions[bot]"
-          git add .
-          git commit -m "Update dataset from GitHub Actions" || echo "No changes to commit"
-          git push https://${{ secrets.HF_USERNAME }}:${{ secrets.HF_TOKEN }}@huggingface.co/datasets/${{ secrets.HF_USERNAME }}/${{ secrets.HF_DATASET }}
+          python3 << 'EOF'
+          from huggingface_hub import HfApi
+          import os
+          
+          api = HfApi()
+          
+          repo_id = f"{os.environ['HF_USERNAME']}/{os.environ['HF_DATASET']}"
+          
+          # Upload entire dataset folder
+          api.upload_folder(
+              folder_path="dataset",
+              repo_id=repo_id,
+              repo_type="dataset",
+              token=os.environ["HF_TOKEN"],
+              path_in_repo="dataset",
+              ignore_patterns=None,
+          )
+          
+          print("Upload abgeschlossen.")
+          EOF
 
       - name: Delete dataset folder in GitHub repo
         if: steps.check_dataset.outputs.exists == 'true'
@@ -87,3 +81,4 @@ jobs:
           git add -A
           git commit -m "Remove dataset after pushing to HuggingFace" || echo "No changes to commit"
           git push
+
