--- a/.github/workflows/push_to_hf.yml
+++ b/.github/workflows/push_to_hf.yml
@@ -72,9 +72,11 @@ jobs:
           BATCH_SIZE=200
           count=0
 
-          # Alle neuen Dateien finden
-          git add -N dataset
-          files=$(git diff --name-only --cached dataset)
+          # Alle untracked Dateien finden
+          files=$(git ls-files -o --exclude-standard dataset)
+
+          echo "Gefundene neue Dateien:"
+          echo "$files"
 
           for file in $files; do
             git add "$file"
