--- a/.github/workflows/update_maps.yml
+++ b/.github/workflows/update_maps.yml
@@ -29,7 +29,7 @@ jobs:
           python-version: "3.11"
 
       - name: Install dependencies
-        run: pip install pandas huggingface_hub
+        run: pip install pandas huggingface_hub matplotlib
 
       - name: Run sort_maps script
         run: python sort_maps.py
