--- a/.github/workflows/update_maps.yml
+++ b/.github/workflows/update_maps.yml
@@ -38,7 +38,7 @@ jobs:
         run: | 
           git config --global user.name "github-actions[bot]" 
           git config --global user.email "github-actions[bot]@users.noreply.github.com" 
-          git add maps.csv 
+          git add maps.csv images_per_country.png
           
           if git diff --cached --quiet; then 
             echo "Keine Änderungen – nichts zu committen." 
